tests/errors/preprocessor/temporarily_unemployed/multifile/no_guard/include/source/test1.c
#define A 5

void main()
{
  int h = h1() + A;
  printid(h);
}
